--- a/examples/Sample.ipynb
+++ b/examples/Sample.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x205b2414400>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1e5d05194c0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -77,7 +77,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', digest='14731062', name='Sample-1777', description='', created_at=datetime.datetime(2022, 6, 13, 13, 55, 51, 150000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 14, 10, 44, 58, 781000, tzinfo=datetime.timezone.utc), fields=None)"
+      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', digest='31720794', name='Sample-1777', description='', created_at=datetime.datetime(2022, 6, 13, 13, 55, 51, 150000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 24, 24, 461000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 5,
      "metadata": {},
@@ -97,19 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[SampleProperty(id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308'), name='ID', content=CellPropertyContent(value='Sample-1777', name=None, eid=None, values=None)),\n SampleProperty(id=UUID('278c491b-dd8a-3361-8c14-9c4ac790da34'), name='Template', content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)),\n SampleProperty(id='digests.self', name=None, content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='digests.external', name=None, content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='1', name='Created Date', content=CellPropertyContent(value='2022-06-13T13:55:51.211451408Z', name=None, eid=None, values=None)),\n SampleProperty(id='2', name='Description', content=CellPropertyContent(value='test edit', name=None, eid=None, values=None)),\n SampleProperty(id='3', name='Comments', content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='4', name='Amount', content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='10', name='Attached Docs', content=CellPropertyContent(value='0', name=None, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', values=None)),\n SampleProperty(id='sampleId', name='ID', content=CellPropertyContent(value='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', name=None, eid=None, values=None)),\n SampleProperty(id='sourceName', name='Template', content=CellPropertyContent(value='Sample', name=None, eid=None, values=None))]"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "properties = sample.get_properties()\n",
-    "list(properties)"
+    "for item in sample:\n",
+    "    if item.id == '2':\n",
+    "        item.content.set_value('5545')"
    ],
    "metadata": {
     "collapsed": false,
@@ -123,16 +115,26 @@
    "execution_count": 7,
    "outputs": [
     {
-     "data": {
-      "text/plain": "generator"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308') name='ID' content=CellPropertyContent(value='Sample-1777', name=None, eid=None, values=None)\n",
+      "id=UUID('278c491b-dd8a-3361-8c14-9c4ac790da34') name='Template' content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)\n",
+      "id='digests.self' name=None content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
+      "id='digests.external' name=None content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
+      "id='1' name='Created Date' content=CellPropertyContent(value='2022-06-13T13:55:51.211451408Z', name=None, eid=None, values=None)\n",
+      "id='2' name='Description' content=CellPropertyContent(value='5545', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
+      "id='4' name='Amount' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
+      "id='10' name='Attached Docs' content=CellPropertyContent(value='0', name=None, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', values=None)\n",
+      "id='sampleId' name='ID' content=CellPropertyContent(value='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', name=None, eid=None, values=None)\n",
+      "id='sourceName' name='Template' content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)\n"
+     ]
     }
    ],
    "source": [
-    "type(properties)"
+    "for item in sample:\n",
+    "    print(item)"
    ],
    "metadata": {
     "collapsed": false,
@@ -144,91 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "SampleProperty(id='1', name='Created Date', content=CellPropertyContent(value='2022-06-13T13:55:51.211451408Z', name=None, eid=None, values=None))"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_property = sample.get_property_by_id('1')\n",
-    "sample_property"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "outputs": [],
-   "source": [
-    "for item in sample.properties:\n",
-    "    if item.id == '2':\n",
-    "        item.content.set_value('555')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[SampleProperty(id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308'), name='ID', content=CellPropertyContent(value='Sample-1777', name=None, eid=None, values=None)),\n SampleProperty(id=UUID('278c491b-dd8a-3361-8c14-9c4ac790da34'), name='Template', content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)),\n SampleProperty(id='digests.self', name=None, content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='digests.external', name=None, content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='1', name='Created Date', content=CellPropertyContent(value='2022-06-13T13:55:51.211451408Z', name=None, eid=None, values=None)),\n SampleProperty(id='2', name='Description', content=CellPropertyContent(value='555', name=None, eid=None, values=None)),\n SampleProperty(id='3', name='Comments', content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='4', name='Amount', content=CellPropertyContent(value=None, name=None, eid=None, values=None)),\n SampleProperty(id='10', name='Attached Docs', content=CellPropertyContent(value='0', name=None, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', values=None)),\n SampleProperty(id='sampleId', name='ID', content=CellPropertyContent(value='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', name=None, eid=None, values=None)),\n SampleProperty(id='sourceName', name='Template', content=CellPropertyContent(value='Sample', name=None, eid=None, values=None))]"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample.properties"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "SignalsNotebookError",
-     "evalue": "<SignalsNotebookError status=400 code=BadRequest> title=The request parameters are in bad format. detail=Wrong request body>",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mSignalsNotebookError\u001B[0m                      Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [17]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43msample\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msave\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\entities\\samples\\sample.py:140\u001B[0m, in \u001B[0;36mSample.save\u001B[1;34m(self, force)\u001B[0m\n\u001B[0;32m    136\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m item\u001B[38;5;241m.\u001B[39mis_changed:\n\u001B[0;32m    137\u001B[0m         request_body\u001B[38;5;241m.\u001B[39mappend(item\u001B[38;5;241m.\u001B[39mrepresentation_for_update\u001B[38;5;241m.\u001B[39mdict(exclude_none\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m))\n\u001B[0;32m    139\u001B[0m api\u001B[38;5;241m.\u001B[39mcall(\n\u001B[1;32m--> 140\u001B[0m     method\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPATCH\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    141\u001B[0m     path\u001B[38;5;241m=\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_get_samples_endpoint(), \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39meid, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mproperties\u001B[39m\u001B[38;5;124m'\u001B[39m),\n\u001B[0;32m    142\u001B[0m     params\u001B[38;5;241m=\u001B[39m{\n\u001B[0;32m    143\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mforce\u001B[39m\u001B[38;5;124m'\u001B[39m: json\u001B[38;5;241m.\u001B[39mdumps(force),\n\u001B[0;32m    144\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mvalue\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnormalized\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    145\u001B[0m     },\n\u001B[0;32m    146\u001B[0m     json\u001B[38;5;241m=\u001B[39m{\n\u001B[0;32m    147\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m: {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mattributes\u001B[39m\u001B[38;5;124m'\u001B[39m: {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m: request_body}},\n\u001B[0;32m    148\u001B[0m     },\n\u001B[0;32m    149\u001B[0m )\n\u001B[0;32m    150\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_reload_properties()\n",
-      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\api.py:118\u001B[0m, in \u001B[0;36mSignalsNotebookApi.call\u001B[1;34m(self, method, path, params, data, json, headers)\u001B[0m\n\u001B[0;32m    112\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m response\u001B[38;5;241m.\u001B[39mok:\n\u001B[0;32m    113\u001B[0m     log\u001B[38;5;241m.\u001B[39merror(\n\u001B[0;32m    114\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mError has been occurred while getting response, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    115\u001B[0m         response\u001B[38;5;241m.\u001B[39mstatus_code,\n\u001B[0;32m    116\u001B[0m         extra\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mresponse\u001B[39m\u001B[38;5;124m'\u001B[39m: response},\n\u001B[0;32m    117\u001B[0m     )\n\u001B[1;32m--> 118\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m SignalsNotebookError(response)\n\u001B[0;32m    119\u001B[0m log\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSuccessful request - HTTP url: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m, response\u001B[38;5;241m.\u001B[39murl, response\u001B[38;5;241m.\u001B[39mstatus_code)\n\u001B[0;32m    121\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m response\n",
-      "\u001B[1;31mSignalsNotebookError\u001B[0m: <SignalsNotebookError status=400 code=BadRequest> title=The request parameters are in bad format. detail=Wrong request body>"
-     ]
-    }
-   ],
    "source": [
     "sample.save()"
    ],
@@ -241,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import Sample\n",
@@ -256,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import SampleProperty\n",
@@ -268,7 +186,7 @@
     ")\n",
     "template_sample = EntityStore.get('sample:fcaa5e11-ace8-4d2c-a212-293dad3c2122')\n",
     "new_sample = Sample.create(\n",
-    "    fields=[new_sample_property],\n",
+    "    properties=[new_sample_property],\n",
     "    template=template_sample,\n",
     "    ancestors=[experiment],\n",
     ")"
@@ -282,8 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:8c1abb55-7aed-48f2-9147-d7d1f5cffa26', digest='87234418', name='Sample-1783', description='', created_at=datetime.datetime(2022, 6, 17, 9, 30, 40, 774000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 17, 9, 30, 40, 774000, tzinfo=datetime.timezone.utc))"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_sample"
    ],
@@ -296,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "new_sample.delete()"
@@ -310,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [],
    "metadata": {
